hw3/canary/author/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
  namespace: istio-course
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
