hw3/canary/author/vs-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors-v2-10
  namespace: istio-course
spec:
  hosts:
  - authors
  http:
  - route:
    - destination:
        host: authors
        subset: v1
      weight: 90
    - destination:
        host: authors
        subset: v2
      weight: 10
