hw3/canary/author/vs-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors-v2-50
  namespace: istio-course
spec:
  hosts:
  - authors
  http:
  - route:
    - destination:
        host: authors
        subset: v1
      weight: 50
    - destination:
        host: authors
        subset: v2
      weight: 50
